styles/style.css
:root {
	--mythos-pink: #4c2b51;
	--mythos-bright: #be5ad5;

	--mythos-text: #fdfcfb;
	--mythos-white: #fdfcfb;

	--logos-orange: #984d31;
	--logos-text: #46362f;
    --logos-white: #fdfcfb;

	--mist-blue:#28475b;
	--mist-text:#232b35;

    --extra-grey:#635f56;
	--extra-text:#3a3632;
	--extra-white:#b8b6a9;

    --options-green: #837970;
    --options-text: #3a3632;

    --tag-yellow: #fff2ab;

    --tag-purple: #7b4a83;

    --tag-red: #f9d0c4;
    --tag-red-dark: #852d3a;

    --tag-green: #e2e9b4;
}

.theme-block {
    padding-left: 10px;
    padding-right: 10px;
}


div.themebook-name {
    margin-top: 0;
}

div.theme-block {
    border-bottom: none;
    border-top: none;
    box-shadow: none;
}

.locked .theme-name-input {
    mask-image: url(../images/scrape.png);
}

div.Mythos-theme {
    background-image: url(../images/mythcardbg.webp);
    background-repeat: round;
    background-size: 100%;
    background-clip: content-box;
    background-position-y: top; 
}

.Mythos-theme div.themebook-name {
    background: none;
}

.Mythos-theme .fa-disabled{
    color: var(--mythos-white);
}

.locked .Mythos-theme .theme-name-input {
    transform: skew(-6deg);
    text-shadow: 
        0px 0px 8px var(--mythos-bright), 
        0px 0px 16px var(--mythos-bright), 
        0px 0px 32px var(--mythos-bright);
    mask-image: none;
}

div.Logos-theme {
    background-image: url(../images/logcardbg.webp);
    background-repeat: round;
    background-size: 100%;
    background-clip: content-box;
    background-position-y: top; 
}

.Logos-theme div.themebook-name {
    background: none;
}

.Logos-theme .theme-name-input {
    text-shadow: none;
}

div.Crew-theme, div.Extra-theme {
    background-image: url(../images/cardbg.webp);
    background-repeat: round;
    background-size: 100%;
    background-clip: content-box;
    background-position-y: top; 
}


/* ------------------------------------- */

.tag .positive-selected {
    color: inherit;
    font-weight: bold;
    background: var(--tag-yellow);
    background-image: none;
}

.Mythos-theme .tag .positive-selected {
    background: var(--tag-purple);
}

.status .positive-selected {
    background: var(--tag-green);
}

.status .negative-selected, .tag .negative-selected {
    color: inherit;
    font-weight: bold;
    background: var(--tag-red);
    background-image: none;
}

.Mythos-theme .tag .negative-selected {
    background: var(--tag-red-dark);
}

/* -------------------------------- */

.burn-level-1 {
    color: var(--tag-red) !important; 
}

.Mythos-theme .burn-level-1 {
    color: var(--tag-red-dark) !important; 
}

/* ---------------------------------------------- */

/* @font-face { */
/* 	font-family: "Fira Sans Extra Condensed"; */
/* 	font-style: bold; */
/* 	font-weight: 900; */
/* 	src: local(""), */
/* 	url("../fonts/fira-sans-extra-condensed-900.ttf") format("woff2"); */
/* } */

@font-face {
	font-family: "Fira Sans Extra Condensed";
	font-style: bold;
	font-weight: 800;
	src: local(""),
	url("../fonts/fira-sans-extra-condensed-800.ttf") format("woff2");
}

@font-face {
	font-family: "Rock Salt";
	font-style: normal;
	font-weight: 500;
	src: local(""),
	url("../fonts/RockSalt.ttf") format("woff2");
}

@font-face {
	font-family: "Averia Serif Libre";
	font-style: normal;
	font-weight: 500;
	src: local(""),
	url("../fonts/AveriaSerifLibre-Regular.ttf") format("woff2");
}

.theme-name-input.borderless {
/*     font-size: 2em; */
    text-wrap: balance;
    font-weight: bold;
    font-family: Rift Bold;
    text-transform: uppercase;
    word-break: break-word;
    border: none;
    height: auto;
    line-height: 0.80;
    margin-bottom: 12px;
}

.theme-title {
    padding-left: 6px;
    padding-right: 6px;
}

.tag-add-icons,
div.themebook-motivation-label, div.themebook-identity-label, div.themebook-mystery-label, div.themebook-crew-label, div.themebook-mist-label,
.section-name, .story-tags-header, .relationship-tag-category h2 {
    font-family: Fira Sans Extra Condensed;
    font-weight: 800;
    text-wrap: balance;
}

.motivation-input{
    font-family: Rock Salt;
    font-size: 12px;
}

.clue-name {
    font-family: Averia Serif Libre;
}

.move-text, .move-list, .roll-modifiers {
    font-family: PT Serif;
}

section.card-style {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 8px 0 rgba(0, 0, 0, 0.2);
}

section.clue-data-block {
    background-image: linear-gradient(to right, #fdf0a8, #fdf0a8AA, #fdf0a8), url(../images/paperbg.webp);
    border-radius: 6px;
}

section.juice-data-block {
	background: linear-gradient(
			to right,
			color-mix(in srgb, var(--actor-underlay) 15%, transparent),
			color-mix(in srgb, var(--actor-underlay) 8%, transparent),
			color-mix(in srgb, var(--actor-underlay) 35%, transparent)
		),
		url(../images/paperbg.webp);
}

section.cluejournal-data-block {
	background: linear-gradient(
			to right,
			color-mix(in srgb, var(--actor-underlay) 15%, transparent),
			color-mix(in srgb, var(--actor-underlay) 8%, transparent),
			color-mix(in srgb, var(--actor-underlay) 35%, transparent)
		),
		url(../images/paperbg.webp);
}

.window-app:not(.story-tag-window) .window-content {
    position: relative;
    --window-content-underlay: transparent;
}

.window-app:not(.story-tag-window) .window-content > * {
    position: relative;
    z-index: 1;
}

.window-app:not(.story-tag-window) .window-content::before {
    content: "";
    position: absolute;
    inset: 0;
    z-index: 0;
    pointer-events: none;
    background-color: var(--actor-underlay);
    -webkit-mask-image: url(../images/paperbg-dark.webp);
    -webkit-mask-size: 300%;
    -webkit-mask-repeat: repeat;
    mask-image: url(../images/paperbg-dark.webp);
    mask-size: 300%;
    mask-repeat: repeat;
}

.window-app:not(.story-tag-window) > header {
    background-color: var(--actor-underlay);
}

.sheet .tabs .item:not(.active), .short-description, .separator-icon {
    color: var(--extra-white);
}
.separator-icon {
    font-size: 1.5em;
}

.tab-content .section-header, .bio-section {
    color: var(--mythos-text);
}

input.logos-name {
    color: var(--mythos-text);
    text-shadow: 0px 2px 4px var(--logos-orange);
}

input.mythos-name {
    color: var(--mythos-text);
    text-align: right;
}

